statum-macros/tests/ui/invalid_machine_cfg_field.stderr
error: Error: #[machine] struct `WorkflowMachine` field `hidden` uses `#[cfg]`, but Statum does not support conditionally compiled machine fields.
       Fix: move the cfg gate to the whole `#[machine]` item or split cfg-specific field sets into separate machines.
  --> tests/ui/invalid_machine_cfg_field.rs:21:5
   |
21 | /     #[cfg(any())]
22 | |     hidden: &'static str,
   | |________________________^

error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/ui/invalid_machine_cfg_field.rs:23:2
   |
23 | }
   |  ^ consider adding a `main` function to `$DIR/tests/ui/invalid_machine_cfg_field.rs`
